Adcionado modelo de barra de navegação

--- a/index.html
+++ b/index.html
@@ -10,7 +10,34 @@
     <title></title>
   </head>
   
-  <body>
+  <body class="bg-secondary text-white">
+  	<nav class="navbar navbar-expand-lg navbar-light bg-light">	
+	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+	    <form class="form-inline my-2 my-lg-0">
+	      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+	      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+	    </form>
+		<ul class="navbar-nav mr-auto">
+			<li class="nav-item active">
+	        	<a class="nav-link" href="">Login<span class="sr-only">(current)</span></a>
+	      	</li>
+			<li class="nav-item active">
+	        	<a class="nav-link" href="">Cadastre-se<span class="sr-only">(current)</span></a>
+	      	</li>
+		</ul>
+	  </div>
+	</nav>
+	
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla viverra pellentesque lobortis. Cras in euismod eros. Vivamus quis pretium tortor, nec consequat libero. Aliquam ut sagittis felis, in volutpat magna. Cras venenatis, lacus quis molestie consectetur, tortor dui volutpat odio, non tempus ex dui at nulla. Ut aliquam eros arcu, vitae pellentesque eros eleifend vitae. Vestibulum id risus tristique, ullamcorper ex vel, vulputate eros.</p><br>
+
+	<p>Etiam vulputate orci eget augue venenatis, sit amet placerat nisi viverra. Curabitur viverra orci et placerat convallis. Vestibulum eros magna, facilisis cursus ultrices sed, fringilla eget augue. Nunc feugiat augue sit amet dolor pellentesque, a euismod ipsum feugiat. Nulla cursus quis justo vel volutpat. Pellentesque condimentum consequat fringilla. Pellentesque suscipit ex lacus, pharetra scelerisque odio aliquam eu. Donec ultricies, leo ut interdum sollicitudin, lacus purus fringilla mauris, vel porttitor enim enim eget lorem. Donec sed enim et tortor dictum molestie. Vestibulum et leo risus. Donec sodales ante id semper maximus. Vivamus id varius ex, sed tempus orci. Nulla facilisi.</p><br>
+
+	<p>Vivamus ac sapien id ligula pharetra ultrices. Aenean mattis accumsan risus, ut tempus sem malesuada nec. Vestibulum varius nec sem eget feugiat. Curabitur commodo odio ac felis dictum, id ultricies nisi ultricies. Nunc sollicitudin non mauris vitae pretium. Proin dolor felis, varius et tempus nec, pellentesque lacinia dui. Phasellus hendrerit sed erat ut bibendum. Pellentesque velit massa, tristique nec enim id, maximus porttitor est. Quisque eros neque, egestas nec felis a, tincidunt imperdiet nunc. Phasellus porta hendrerit pretium.</p><br>
+
+	<p>In hendrerit nunc in dapibus consequat. Praesent ultrices tincidunt augue, ac molestie neque. Sed quis quam a justo eleifend hendrerit. Nullam placerat turpis quis eleifend blandit. Nunc lobortis, justo at faucibus malesuada, lorem nisl laoreet tortor, vitae gravida ante libero vel orci. Sed tempor semper felis a aliquet. Nam nisl erat, aliquam sed semper eu, pharetra ac diam. Sed finibus tortor massa, non rhoncus metus laoreet at. Sed eget rhoncus nulla. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur sagittis mi nulla, a suscipit purus semper in. Proin vel egestas est. Aliquam massa dui, ornare non ex vel, sodales scelerisque justo. Quisque magna odio, molestie tristique leo sed, cursus ullamcorper tortor. Curabitur lectus purus, viverra ac lorem a, bibendum auctor leo.</p><br>
+
+	<p>Praesent varius erat sed mauris rhoncus, ac lacinia metus interdum. Phasellus tincidunt massa non dignissim congue. Suspendisse potenti. In id faucibus eros. Vivamus sollicitudin, eros ac bibendum ornare, nibh justo elementum lectus, eu fermentum ipsum nisl non elit. Duis risus turpis, tristique in dignissim eu, lobortis quis libero. In vestibulum sem et nisi elementum tincidunt. Nullam commodo erat vel pretium facilisis. Donec pretium porta mattis. Suspendisse molestie varius sagittis. Sed eget tempus libero. Fusce quis tincidunt magna.</p><br>
+	
   </body>
 
 </html>
