Adcionada Página de Login e estilizações

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		</link>
 		<title></title>
 	</head>
-	<body class="bg-secondary text-white">
+	<body class="bg-secondary text-white index-body">
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<a class="nav-link font-weight-bold" href="#">RePlaneja</a>
 			<div class="collapse navbar-collapse">
@@ -19,11 +19,11 @@
 					<input class="form-control mr-sm-3 input-xxlarge" type="search" placeholder="Search" aria-label="Search">
 					<button class="btn btn-outline-success mr-sm-2" type="submit">Search</button>
 				</form>
-				<a class="nav-link" href="">Login<span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="signin.html">Login<span class="sr-only">(current)</span></a>
 				<a class="nav-link" href="">Cadastre-se<span class="sr-only">(current)</span></a>
 			</div>
 		</nav>
-		<div class="container bg-dark mt-5 pt-1 pb-1">
+		<div class="container bg-dark mt-5 pt-1 pb-1 border rounded">
 			<div class="row mt-1">
 				<div class="col-sm-6">
 					<button class="btn btn-success">+ Adcionar Novo Plano</button>
