--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE HTML>
 <html>
 	<head>
@@ -20,7 +18,7 @@
 					<button class="btn btn-outline-success mr-sm-2" type="submit">Search</button>
 				</form>
 				<a class="nav-link" href="signin.html">Login<span class="sr-only">(current)</span></a>
-				<a class="nav-link" href="">Cadastre-se<span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="cadastro.html">Cadastre-se<span class="sr-only">(current)</span></a>
 			</div>
 		</nav>
 		<div class="container bg-dark mt-5 pt-1 pb-1 border rounded">
@@ -51,11 +49,11 @@
 				</div>
 				<div class="row ml-2 mr-2 mt-2">
 					<div>
-						<p>Descrição: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas commodo tincidunt ex. Proin sollicitudin velit quis 
-							dictum efficitur. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam vestibulum neque et nulla scelerisque, et condimentum 
-							mauris iaculis. Sed velit urna, aliquet id laoreet volutpat, interdum ut enim. Donec ornare eget justo at sodales. In tempus eleifend nulla non efficitur. Duis 
-							consequat tortor lacus, eu hendrerit orci egestas nec. Aliquam vel quam dapibus, eleifend leo ut, fringilla tellus. Praesent mollis ipsum convallis, posuere nisl et, 
-							suscipit orci. Mauris id nulla id magna lobortis ornare. Nunc aliquam mollis risus, tempus efficitur eros consequat id. 
+						<p>Descrição: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas commodo tincidunt ex. Proin sollicitudin velit quis
+							dictum efficitur. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam vestibulum neque et nulla scelerisque, et condimentum
+							mauris iaculis. Sed velit urna, aliquet id laoreet volutpat, interdum ut enim. Donec ornare eget justo at sodales. In tempus eleifend nulla non efficitur. Duis
+							consequat tortor lacus, eu hendrerit orci egestas nec. Aliquam vel quam dapibus, eleifend leo ut, fringilla tellus. Praesent mollis ipsum convallis, posuere nisl et,
+							suscipit orci. Mauris id nulla id magna lobortis ornare. Nunc aliquam mollis risus, tempus efficitur eros consequat id.
 						</p>
 					</div>
 				</div>
@@ -77,11 +75,11 @@
 				</div>
 				<div class="row ml-2 mr-2 mt-2">
 					<div>
-						<p>Descrição: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas commodo tincidunt ex. Proin sollicitudin velit quis 
-							dictum efficitur. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam vestibulum neque et nulla scelerisque, et condimentum 
-							mauris iaculis. Sed velit urna, aliquet id laoreet volutpat, interdum ut enim. Donec ornare eget justo at sodales. In tempus eleifend nulla non efficitur. Duis 
-							consequat tortor lacus, eu hendrerit orci egestas nec. Aliquam vel quam dapibus, eleifend leo ut, fringilla tellus. Praesent mollis ipsum convallis, posuere nisl et, 
-							suscipit orci. Mauris id nulla id magna lobortis ornare. Nunc aliquam mollis risus, tempus efficitur eros consequat id. 
+						<p>Descrição: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas commodo tincidunt ex. Proin sollicitudin velit quis
+							dictum efficitur. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam vestibulum neque et nulla scelerisque, et condimentum
+							mauris iaculis. Sed velit urna, aliquet id laoreet volutpat, interdum ut enim. Donec ornare eget justo at sodales. In tempus eleifend nulla non efficitur. Duis
+							consequat tortor lacus, eu hendrerit orci egestas nec. Aliquam vel quam dapibus, eleifend leo ut, fringilla tellus. Praesent mollis ipsum convallis, posuere nisl et,
+							suscipit orci. Mauris id nulla id magna lobortis ornare. Nunc aliquam mollis risus, tempus efficitur eros consequat id.
 						</p>
 					</div>
 				</div>
@@ -103,11 +101,11 @@
 				</div>
 				<div class="row ml-2 mr-2 mt-2">
 					<div>
-						<p>Descrição: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas commodo tincidunt ex. Proin sollicitudin velit quis 
-							dictum efficitur. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam vestibulum neque et nulla scelerisque, et condimentum 
-							mauris iaculis. Sed velit urna, aliquet id laoreet volutpat, interdum ut enim. Donec ornare eget justo at sodales. In tempus eleifend nulla non efficitur. Duis 
-							consequat tortor lacus, eu hendrerit orci egestas nec. Aliquam vel quam dapibus, eleifend leo ut, fringilla tellus. Praesent mollis ipsum convallis, posuere nisl et, 
-							suscipit orci. Mauris id nulla id magna lobortis ornare. Nunc aliquam mollis risus, tempus efficitur eros consequat id. 
+						<p>Descrição: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas commodo tincidunt ex. Proin sollicitudin velit quis
+							dictum efficitur. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam vestibulum neque et nulla scelerisque, et condimentum
+							mauris iaculis. Sed velit urna, aliquet id laoreet volutpat, interdum ut enim. Donec ornare eget justo at sodales. In tempus eleifend nulla non efficitur. Duis
+							consequat tortor lacus, eu hendrerit orci egestas nec. Aliquam vel quam dapibus, eleifend leo ut, fringilla tellus. Praesent mollis ipsum convallis, posuere nisl et,
+							suscipit orci. Mauris id nulla id magna lobortis ornare. Nunc aliquam mollis risus, tempus efficitur eros consequat id.
 						</p>
 					</div>
 				</div>
@@ -115,4 +113,3 @@
 		</div>
 	</body>
 </html>
-
