--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	</head>
 	<body class="bg-secondary text-white index-body">
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="nav-link font-weight-bold" href="#">RePlaneja</a>
+			<a class="nav-link font-weight-bold" href="index.html">RePlaneja</a>
 			<div class="collapse navbar-collapse">
 				<form class="form-inline ml-auto">
 					<input class="form-control mr-sm-3 input-xxlarge" type="search" placeholder="Search" aria-label="Search">
@@ -126,7 +126,7 @@
 		<div class="container bg-dark mt-5 pt-1 pb-1 border rounded">
 			<div class="row mt-1">
 				<div class="col-sm-6">
-					<button class="btn btn-success">+ Adcionar Novo Plano</button>
+					<a href="adicionar-plano.html"><button class="btn btn-success">+ Adcionar Novo Plano</button></a>
 				</div>
 				<div class="col-sm-6 d-flex justify-content-end">
 					<label class=" d-flex align-items-end">Ordenar por:</label>
