Feita pequena mudança nos Lorem Ipsum do index

--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
 					</div>
 					<div class="row ml-2 mr-2 mt-2">
 						<div>
-							<p>Descrição: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas commodo tincidunt ex. Proin sollicitudin velit quis
-								dictum efficitur. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam vestibulum neque et nulla scelerisque, et condimentum
-								mauris iaculis. Sed velit urna, aliquet id laoreet volutpat, interdum ut enim. Donec ornare eget justo at sodales. In tempus eleifend nulla non efficitur. Duis
-								consequat tortor lacus, eu hendrerit orci egestas nec. Aliquam vel quam dapibus, eleifend leo ut, fringilla tellus. Praesent mollis ipsum convallis, posuere nisl et,
-								suscipit orci. Mauris id nulla id magna lobortis ornare. Nunc aliquam mollis risus, tempus efficitur eros consequat id.
+							<p>Descrição: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia libero id egestas fringilla. Proin placerat accumsan ante,
+ 							    ultricies varius nibh mollis at. Duis blandit placerat tincidunt. Sed dapibus eget neque non luctus. Quisque porttitor lobortis urna at tempus. 
+								Curabitur feugiat metus et commodo consectetur. Pellentesque tempor lacus lacus, bibendum ultricies nisl sodales quis. 
+								Mauris tempor, enim ut placerat mattis, nibh ante pulvinar diam, id tempus mauris quam vitae ex. Duis fringilla tincidunt sapien eget convallis. 
+								Cras a ex a dolor efficitur convallis in at nibh. Interdum et malesuada fames ac ante ipsum primis in faucibus. 
 							</p>
 						</div>
 					</div>
@@ -207,11 +207,13 @@
 					</div>
 					<div class="row ml-2 mr-2 mt-2">
 						<div>
-							<p>Descrição: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas commodo tincidunt ex. Proin sollicitudin velit quis
-								dictum efficitur. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam vestibulum neque et nulla scelerisque, et condimentum
-								mauris iaculis. Sed velit urna, aliquet id laoreet volutpat, interdum ut enim. Donec ornare eget justo at sodales. In tempus eleifend nulla non efficitur. Duis
-								consequat tortor lacus, eu hendrerit orci egestas nec. Aliquam vel quam dapibus, eleifend leo ut, fringilla tellus. Praesent mollis ipsum convallis, posuere nisl et,
-								suscipit orci. Mauris id nulla id magna lobortis ornare. Nunc aliquam mollis risus, tempus efficitur eros consequat id.
+							<p>Descrição: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eu dapibus magna, a posuere nunc. 
+							    Vestibulum aliquet vel erat vel mattis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; 
+								Curabitur sed dictum turpis. Vivamus vehicula lectus et lacus laoreet, vel sagittis urna volutpat. Suspendisse rutrum semper consequat. 
+								Aliquam turpis nisi, eleifend eleifend malesuada sagittis, tristique quis eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+								Cras lacinia nisl id purus accumsan accumsan vitae in urna. Donec vehicula dolor ante, a posuere quam porttitor in. 
+								Curabitur ut lectus posuere, pharetra lectus eu, volutpat arcu. Vestibulum sed gravida nunc, sit amet fermentum mauris. 
+								Nam bibendum turpis eu lectus varius viverra et at felis. 
 							</p>
 						</div>
 					</div>
