Feito o preenchimento dinâmico do index.html

--- a/adicionar-plano.html
+++ b/adicionar-plano.html
@@ -52,7 +52,7 @@
            </select>
          </div>
          <div class="col-md-4 mb-3">
-           <label>Séries-Alvo</label>
+           <label>Série-Alvo</label>
            <select class="custom-select d-block w-100">
              <option>Escolha...</option>
              <option>1º ano</option>
