--- a/cadastro.html
+++ b/cadastro.html
@@ -10,9 +10,9 @@
     <form class="form-signin border p-5">
         <h1 class="h3 mb-3 font-weight-normal">Cadastre-se</h1>
         <label class="sr-only">Nome: </label>
-        <input type="text" id="inputName" class="form-control mb-1" placeholder="Nome" required>
+        <input type="text" id="inputName" class="form-control mb-1" placeholder="Nome" required autofocus>
         <label class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control mb-1" placeholder="Endereço de e-mail" required autofocus>
+        <input type="email" id="inputEmail" class="form-control mb-1" placeholder="Endereço de e-mail" required>
         <label class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control mb-1" placeholder="Senha" required>
         <label class="sr-only">Confirm Password</label>
