--- a/signin.html
+++ b/signin.html
@@ -5,14 +5,30 @@
     <title>Tela de Login</title>
     <link rel="stylesheet" href="bootstrap4/css/bootstrap.css">
     <link rel="stylesheet" href="style.css">
+	<script src="jquery.js"></script>
+	<script>
+	
+		var login = [];
+	
+		$(function(){
+			$("form").submit(function(event){
+			
+				var infoArray = $(this).serializeArray();
+				login.push(Object.assign({}, infoArray));
+				event.preventDefault();
+			
+			});	
+		});
+	
+	</script>
   </head>
   <body class="text-center d-flex justify-content-center signin-body">
     <form class="form-signin border p-5">
         <h1 class="h3 mb-3 font-weight-normal">Faça Login</h1>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control mb-1" placeholder="Endereço de e-mail" required autofocus>
+        <label for="inputEmail" class="sr-only" >Email address</label>
+        <input type="email" id="inputEmail" name="email" class="form-control mb-1" placeholder="Endereço de e-mail" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control mb-1" placeholder="Senha" required>
+        <input type="password" id="inputPassword" name="email" class="form-control mb-1" placeholder="Senha" required>
         <button class="btn btn-lg btn-primary btn-block mt-3" type="submit">Log in</button>
     </form>
 </body>
