--- a/adicionar-plano.html
+++ b/adicionar-plano.html
@@ -16,6 +16,8 @@
 				plano.push(Object.assign({}, infoArray));
 				$(".novo-plano").html("<div class=\"alert alert-secondary\" role=\"alert\">Plano Enviado</div>");
 				event.preventDefault();
+
+				localStorage.setItem("novoPlano", JSON.stringify(infoArray));
 			
 			});	
 		});
